--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,31 +5,36 @@ stages:
 
 build:
   stage: build
-  image: docker:20.10.7 
+  image: docker:24.0.5
   services:
-    - docker:20.10.7-dind  
+    - docker:24.0.5-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+  before_script:
+      - docker login -u chotam -p Danik0509
   script:
-    - docker build -t serverfinal -f Dockerfile . 
+      - docker build -t chotam/serverfinalapp:python-dev .
   only:
-    - main  
+    - main
 
 test:
   stage: test
-  image: python:3.11  
+  image: python:3.11
   script:
-    - pip install -r requirements.txt  
-    - python manage.py test  
+    - pip install -r requirements.txt
+    - python manage.py test
   only:
-    - main  
+    - main
 
 deploy:
   stage: deploy
-  image: docker:20.10.7  
+  image: docker:24.0.5
   script:
     - echo "Deploying project..."
-    - docker-compose -f docker-compose.prod.yml up -d 
+    - docker push chotam/serverfinalapp:python-dev
   environment:
-    name: production  
+    name: production
     url: http://127.0.0.1:8000
   only:
-    - main  
+    - main
+
